--- a/view/homeView.html
+++ b/view/homeView.html
@@ -1,7 +1,7 @@
 {{>header}}
 <section class="containerImage">
     <img class="w3-center imglogo" src="public/imagenes/logo.png">
-    <div class=" divheader">
+    <!---<div class=" divheader">
         <ul class="listaHeader">
             <li><a href="/mvc-gaucho-rocket/Home" class="text-white">Home</a></li>
             <li>Servicios</li>
@@ -9,7 +9,7 @@
             <li><a href="/mvc-gaucho-rocket/Login" class="text-white">Iniciar sesión</a></li>
             <li><a href="/mvc-gaucho-rocket/Registro" class="text-white">Registrarme</a></li>
         </ul>
-    </div>
+    </div>-->
 <br><br>
     <h3 class="reserva"><a href="/mvc-gaucho-rocket/login" class="w3-btn text-white">Hacé tu reserva</a></h3>
 </section>
