--- a/view/loginView.html
+++ b/view/loginView.html
@@ -5,6 +5,11 @@
         <strong></strong> {{msg}}
     </div></div>
 {{/msg}}
+{{#msgRegistro}}
+<div class="container"><div class="alert alert-success" role="alert">
+    <strong></strong> {{msgRegistro}}
+</div></div>
+{{/msgRegistro}}
 <!-- Content -->
 <div class="container-fluid">
     <style>form{width: 500px;margin: auto;}@media(max-width:600px){form{width: 100%;}}</style>
