--- a/view/registroView.html
+++ b/view/registroView.html
@@ -9,7 +9,7 @@
 
 <!-- Content -->
 <div class="container-fluid">
-    <form action="procesarFormulario.php" class="form-neon" method="POST" data-form="save" autocomplete="off">
+    <form action="/mvc-gaucho-rocket/Registro/procesarFormulario" class="form-neon" method="POST" data-form="save" autocomplete="off">
         <fieldset>
             </i> &nbsp; Información personal
             <div class="container-fluid">
