--- a/view/logueadoView.html
+++ b/view/logueadoView.html
@@ -7,6 +7,10 @@
     </div>
     <br><br>
 <div class="container">
+    <a href="/mvc-gaucho-rocket/medico/turno"><button type="button" class="btn btn-outline-secondary">Solicitar Turno</button></a>
+    <a href="/mvc-gaucho-rocket/medico"><button type="button" class="btn btn-outline-secondary">Realizar chequeo médico</button></a>
+
+
     <table class="table table-hover">
         <tr>
             <th>Nombre</th>
