--- a/view/partials/header.mustache
+++ b/view/partials/header.mustache
@@ -7,35 +7,35 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <!-- Normalize V8.0.1 -->
-<link rel="stylesheet" href="public/css/normalize.css">
+<link rel="stylesheet" href="//mvc-gaucho-rocket/public/css/normalize.css">
 
 <!-- Bootstrap V4.3 -->
-<link rel="stylesheet" href="public/css/bootstrap.min.css">
+<link rel="stylesheet" href="/mvc-gaucho-rocket/public/css/bootstrap.min.css">
 
 <!-- Bootstrap Material Design V4.0 -->
-<link rel="stylesheet" href="public/css/bootstrap-material-design.min.css">
+<link rel="stylesheet" href="/mvc-gaucho-rocket/public/css/bootstrap-material-design.min.css">
 
 <!-- Font Awesome V5.9.0 -->
-<link rel="stylesheet" href="public/css/all.css">
+<link rel="stylesheet" href="/mvc-gaucho-rocket/public/css/all.css">
 
 <!-- Sweet Alerts V8.13.0 CSS file -->
-<link rel="stylesheet" href="public/css/sweetalert2.min.css">
+<link rel="stylesheet" href="/mvc-gaucho-rocket/public/css/sweetalert2.min.css">
 
 <!-- Sweet Alert V8.13.0 JS file-->
-<script src="public/js/sweetalert2.min.js" ></script>
+<script src="/mvc-gaucho-rocket/public/js/sweetalert2.min.js" ></script>
 
 <!-- jQuery Custom Content Scroller V3.1.5 -->
-<link rel="stylesheet" href="public/css/jquery.mCustomScrollbar.css">
+<link rel="stylesheet" href="/mvc-gaucho-rocket/public/css/jquery.mCustomScrollbar.css">
 
 <!-- General Styles -->
-<link rel="stylesheet" href="public/css/style.css">
+<link rel="stylesheet" href="/mvc-gaucho-rocket/public/css/style.css">
 
-<link rel="icon" type="image/png" href="public/imagenes/logo.png">
+<link rel="icon" type="image/png" href="/mvc-gaucho-rocket/public/imagenes/logo.png">
 
-<link rel="stylesheet" href="public/css/w3.css">
-<link rel="stylesheet" href="public/css/home.css">
+<link rel="stylesheet" href="/mvc-gaucho-rocket/public/css/w3.css">
+<link rel="stylesheet" href="/mvc-gaucho-rocket/public/css/home.css">
 
-<link rel="stylesheet" href="public/css/icons/icons.css">
+<link rel="stylesheet" href="/mvc-gaucho-rocket/public/css/icons/icons.css">
 <body>
 <!-- Navbar -->
 <div class="w3-top">
