--- a/view/turnoView.html
+++ b/view/turnoView.html
@@ -6,30 +6,34 @@
 
         {{#mensaje}} 
 		    <div class="alert alert-success" role="alert">
- <p>{{mensaje}}</p>
+ <p>{{{mensaje}}}</p>
 		    </div>
         {{/mensaje}}
 		
 		
-		
+
     <div class="alert alert-success" role="alert">
         <strong></strong> Formulario para solicitar turno
     </div>
     <br><br>
 <div class="container">
 <form action="/mvc-gaucho-rocket/medico/procesarTurno" class="form-neon" method="POST">
+<p><label>Nombre:</label><strong>{{nombre}}</strong></p>
+<p><label>Apellido:</label><strong>{{apellido}}</strong></p>
+<p><label>Email:</label><strong>{{email}}</strong></p>
+<br><br>
 <div>
  <label>Centro Medico:</label>
- <select name="id_centro" id="id_centro">
+ <select name="id_centro" id="id_centro"  class="form-control">
         {{#centrosMedicos}} 
 		<option value="{{id_centro}}">{{nombre}}</option>
         {{/centrosMedicos}}
 
 </select>
 </div>
-
+<br><br>
 <div>
-<label>Fecha :</label><input type="date" name="fecha" id="fecha">
+<label>Fecha :</label><input type="date" name="fecha" id="fecha"  class="form-control">
 </div>
 
 
