--- a/view/logueadoView.html
+++ b/view/logueadoView.html
@@ -3,11 +3,10 @@
 <br><br><br><br><br>
 <div class="container">
     <div class="alert alert-success" role="alert">
-        <strong></strong> Estas logueado!
+        <strong></strong> Estas logueado! <a class="float-right" href="/mvc-gaucho-rocket/cerrarSesion"><button type="button" class="border-0 mb-1 btn btn-outline-secondary">Cerrar sesión</button></a>
     </div>
     <br><br>
 <div class="container">
-    <a href="/mvc-gaucho-rocket/medico/turno"><button type="button" class="btn btn-outline-secondary">Solicitar Turno</button></a>
     <a href="/mvc-gaucho-rocket/medico"><button type="button" class="btn btn-outline-secondary">Realizar chequeo médico</button></a>
 
 
@@ -28,6 +27,5 @@
     </table>
 </div>
     <br>
-    <a href="/mvc-gaucho-rocket/cerrarSesion"><button type="button" class="btn btn-outline-secondary">Cerrar sesión</button></a>
 </div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 {{>footer}}
