--- a/view/homeView.html
+++ b/view/homeView.html
@@ -1,17 +1,8 @@
 {{>header}}
 <section class="containerImage">
     <img class="w3-center imglogo" src="public/imagenes/logo.png">
-    <!---<div class=" divheader">
-        <ul class="listaHeader">
-            <li><a href="/mvc-gaucho-rocket/Home" class="text-white">Home</a></li>
-            <li>Servicios</li>
-            <li>Destinos</li>
-            <li><a href="/mvc-gaucho-rocket/Login" class="text-white">Iniciar sesión</a></li>
-            <li><a href="/mvc-gaucho-rocket/Registro" class="text-white">Registrarme</a></li>
-        </ul>
-    </div>-->
 <br><br>
-    <h3 class="reserva"><a href="/mvc-gaucho-rocket/login" class="w3-btn text-white">Hacé tu reserva</a></h3>
+    <h3 class="reserva"><a href="/mvc-gaucho-rocket/reserva" class="w3-btn text-white">Hacé tu reserva</a></h3>
 </section>
 
 <section class="container1" id="destinos">
@@ -34,12 +25,12 @@
         <div class="card">
             <img class="card-img-top" src="public/imagenes/home/1.jpg" alt="Card image cap">
             <div class="card-body">
-                <h4 class="card-title">Card title</h4>
+                <h4 class="card-title">General</h4>
                 <p class="card-text">
                     Some quick example text to build on the card title
                     and make up the bulk of the card's content.
                 </p>
-                <!--<a href="#" class="btn btn-outline-secondary">Hacé tu reserva</a>-->
+                <a href="/mvc-gaucho-rocket/reserva" class="btn btn-outline-secondary">Hacé tu reserva</a>
             </div>
         </div>
     </div>
@@ -47,12 +38,12 @@
         <div class="card">
             <img class="card-img-top" src="public/imagenes/home/2.jpg" alt="Card image cap">
             <div class="card-body">
-                <h4 class="card-title">Card title</h4>
+                <h4 class="card-title">Familiar</h4>
                 <p class="card-text">
                     Some quick example text to build on the card title
                     and make up the bulk of the card's content.
                 </p>
-                <!--<a href="#" class="btn btn-outline-secondary">Hacé tu reserva</a>-->
+                <a href="/mvc-gaucho-rocket/reserva" class="btn btn-outline-secondary">Hacé tu reserva</a>
             </div>
         </div>
     </div>
@@ -60,12 +51,12 @@
         <div class="card">
             <img class="card-img-top" src="public/imagenes/home/3.jpg" alt="Card image cap">
             <div class="card-body">
-                <h4 class="card-title">Card title</h4>
+                <h4 class="card-title">Suite</h4>
                 <p class="card-text">
                     Some quick example text to build on the card title
                     and make up the bulk of the card's content.
                 </p>
-                <!--<a href="#" class="btn btn-outline-secondary">Hacé tu reserva</a>-->
+                <a href="/mvc-gaucho-rocket/reserva" class="btn btn-outline-secondary">Hacé tu reserva</a>
             </div>
         </div>
     </div>
