--- a/view/logueadoView.html
+++ b/view/logueadoView.html
@@ -7,7 +7,22 @@
     </div>
     <br><br>
 <div class="container">
+<p>
     <a href="/mvc-gaucho-rocket/medico"><button type="button" class="btn btn-outline-secondary">Realizar chequeo médico</button></a>
+
+</p>
+
+    <p class="float-right">
+        <a href="/mvc-gaucho-rocket/MisReservas"><button type="button" class="btn btn-outline-primary border-0">Mis reservas</button></a>
+
+    </p>
+<p>
+    <a href="/mvc-gaucho-rocket/reserva"><button type="button" class="btn btn-outline-secondary">Reservar Vuelo</button></a>
+
+</p>
+
+
+
 
 
     <table class="table table-hover">
